# apps/repo-article/src/api/dto/feedback_response.go
@@ -1,0 +1,11 @@
+package dto
+
+import "time"
+
+type FeedbackResponse struct {
+	ID     uint      `json:"id"`
+	UserID uint      `json:"user_id"`
+	NewsID uint      `json:"news_id"`
+	Value  int       `json:"value"`
+	Date   time.Time `json:"date"`
+}
