# apps/repo-article/src/api/dto/feedback_trigger_ingestion_request.go
@@ -1,0 +1,8 @@
+package dto
+
+import "time"
+
+type FeedbackTriggerIngestionRequest struct {
+	BeginDate *time.Time `json:"begin_date" binding:"required"`
+	EndDate   *time.Time `json:"end_date" binding:"required"`
+}
